# eyeofsauron

./: .gitignore  CMakeLists.txt  README.md  compile.sh  criticformat.cpp  escher.cpp  eyeos.cpp  index.html  main.cpp  params.json  promoldenformat.cpp  pymodule.cpp  representation.cpp  runexample.py  runexample1.py  runexample2.py  runexample3.py  script.py
include/: escher.hpp  eyeos.hpp  representation.hpp
lib/: __init__.py
